JSHManager ChangeLog

Version 0.3.3
-------------
- Added some additional error checking to handle tier errors on ScoreHero
  (namely RB2 expert drums on Wii).
- Added GHVH support.
- Added Green Day: Rock Band support.
- Fixed issue that was preventing updating of Rock Band song data due to
  new DLC that didn't have a guitar part.

Version 0.3.2
-------------
- Scores for demo tiers are now correctly ignored.
- Empty tiers in the upload score wizard are no longer shown.
- The self-extracting exe for Windows now includes a launcher program,
  JSHManager.exe, that checks that the correct version of Java is installed
  as well as allocates more memory to prevent OutOfMemoryErrors when loading
  chart images. It is recommended, but not required, to use the launcher.
  The patcher program will still update JSHManager.jar correctly.
- Added GH5 support. Also added GHWT PC for completeness.
- Added The Beatles: Rock Band support.
- Fixed bug that sometimes set star rating to blank when quick-editing a
  score via the song list and later editing/saving it via the editor.
- Changed Go To Song behavior from a dialog box to a small bar like
  Internet Explorer or Firefox use for notifications.
- Tiers are now updated with the song data so I won't need to make a new
  release just for tier changes. Tiers are not updated for GH1 through GHA
  since it is unlikely they will ever change.

Version 0.3.1
-------------
- Added a right click menu item to fetch user-submitted SP paths from
  the wiki.
- Clickable links/buttons that might open the internal image viewer can be
  forced to be opened in the browser instead by holding Control (Command on
  Macs) when clicking the link/button. OutOfMemoryErrors occur when trying to
  load large images. If this happens the link will automatically open in the
  browser.
- Added GHA for PC for completeness.
- Added additional sorting options (artist, genre, decade) for Guitar Hero