@@ -33,6 +33,7 @@ GHVH.longName=Guitar Hero: Van Halen
 
 RB1.longName=Rock Band
 RB2.longName=Rock Band 2
+RBN.longName=Rock Band Network
 TBRB.longName=The Beatles: Rock Band
 GDRB.longName=Green Day: Rock Band
 
@@ -51,6 +52,7 @@ GHVH.wikiAbbr=GHVH
 
 RB1.wikiAbbr=RB
 RB2.wikiAbbr=RB2
+RBN.wikiAbbr=RBN
 TBRB.wikiAbbr=TBRB
 GDRB.wikiAbbr=GDRB
 
@@ -69,5 +71,6 @@ GHVH=
 
 RB1=
 RB2=
+RBN=
 TBRB=
 GDRB=
